PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/CATS_TMP_ACQUIRE__c.object-meta.xml
<CustomObject>
    <label>매입내역</label>
    <nameField>
        <displayFormat>ACQUIRE-{YY}{MM}{DD}-{00000}</displayFormat>
        <label>매입내역 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>