PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/AcquFee__c.field-meta.xml
<CustomField>
    <fullName>AcquFee__c</fullName>
    <label>수수료</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>