PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/AcquTot__c.field-meta.xml
<CustomField>
    <fullName>AcquTot__c</fullName>
    <label>매입원금[원화]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>