PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/ApprAmt1__c.field-meta.xml
<CustomField>
    <fullName>ApprAmt1__c</fullName>
    <label>수정 공급가액</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>