PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/ApprDate__c.field-meta.xml
<CustomField>
    <fullName>ApprDate__c</fullName>
    <label>(원)거래일자</label>
    <length>255</length>
    <type>Text</type>
</CustomField>