PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/BCMccName__c.field-meta.xml
<CustomField>
    <fullName>BCMccName__c</fullName>
    <label>BC 업종명</label>
    <length>255</length>
    <type>Text</type>
</CustomField>