PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/BILAMT__c.field-meta.xml
<CustomField>
    <fullName>BILAMT__c</fullName>
    <label>청구원금</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>