PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/CARD_CHECK_GB__c.field-meta.xml
<CustomField>
    <fullName>CARD_CHECK_GB__c</fullName>
    <label>일반승인체크승인구분</label>
    <length>255</length>
    <type>Text</type>
</CustomField>