PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/CHK_CAN_IPGUMDT__c.field-meta.xml
<CustomField>
    <fullName>CHK_CAN_IPGUMDT__c</fullName>
    <label>체크_취소_입금일자</label>
    <length>255</length>
    <type>Text</type>
</CustomField>