PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/CITY_ENG__c.field-meta.xml
<CustomField>
    <fullName>CITY_ENG__c</fullName>
    <label>도시명(영문)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>