PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/ConvFee__c.field-meta.xml
<CustomField>
    <fullName>ConvFee__c</fullName>
    <label>환가료[원화]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>