PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/CurrAcquTot__c.field-meta.xml
<CustomField>
    <fullName>CurrAcquTot__c</fullName>
    <label>매입원금[현지금액]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>