PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/CurrCode__c.field-meta.xml
<CustomField>
    <fullName>CurrCode__c</fullName>
    <label>거래통화코드</label>
    <length>255</length>
    <type>Text</type>
</CustomField>