PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/DiscAmt__c.field-meta.xml
<CustomField>
    <fullName>DiscAmt__c</fullName>
    <label>할인금액</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>