PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/ErrYN__c.field-meta.xml
<CustomField>
    <fullName>ErrYN__c</fullName>
    <label>에러유무</label>
    <length>255</length>
    <type>Text</type>
</CustomField>