PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/MccCode__c.field-meta.xml
<CustomField>
    <fullName>MccCode__c</fullName>
    <label>VISA 업종코드</label>
    <length>255</length>
    <type>Text</type>
</CustomField>