PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/MccName__c.field-meta.xml
<CustomField>
    <fullName>MccName__c</fullName>
    <label>VISA 업종명</label>
    <length>255</length>
    <type>Text</type>
</CustomField>