PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/MembCode__c.field-meta.xml
<CustomField>
    <fullName>MembCode__c</fullName>
    <label>은행코드(회원사코드)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>