PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/MerchCessDate__c.field-meta.xml
<CustomField>
    <fullName>MerchCessDate__c</fullName>
    <label>폐업일</label>
    <length>255</length>
    <type>Text</type>
</CustomField>