PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/MerchZipcode__c.field-meta.xml
<CustomField>
    <fullName>MerchZipcode__c</fullName>
    <label>가맹점 우편번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>