PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/NATION_ENG__c.field-meta.xml
<CustomField>
    <fullName>NATION_ENG__c</fullName>
    <label>국가명(영문)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>