PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/NoneApprYN__c.field-meta.xml
<CustomField>
    <fullName>NoneApprYN__c</fullName>
    <label>무승인 매입여부</label>
    <length>255</length>
    <type>Text</type>
</CustomField>