PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/OrgnCollNo__c.field-meta.xml
<CustomField>
    <fullName>OrgnCollNo__c</fullName>
    <label>(원)매입추심번호[(원)매출전표일련번호]</label>
    <length>255</length>
    <type>Text</type>
</CustomField>