PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/PartAcquCancYN__c.field-meta.xml
<CustomField>
    <fullName>PartAcquCancYN__c</fullName>
    <label>부분매입취소 여부</label>
    <length>255</length>
    <type>Text</type>
</CustomField>