PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/PurchDate__c.field-meta.xml
<CustomField>
    <fullName>PurchDate__c</fullName>
    <label>매입일자</label>
    <length>255</length>
    <type>Text</type>
</CustomField>