PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/PurchTime__c.field-meta.xml
<CustomField>
    <fullName>PurchTime__c</fullName>
    <label>매입시간</label>
    <length>255</length>
    <type>Text</type>
</CustomField>