PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/PurchTot__c.field-meta.xml
<CustomField>
    <fullName>PurchTot__c</fullName>
    <label>매입합계[원화]  = 매입원금(원화)+환가료</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>