PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/PurchYN__c.field-meta.xml
<CustomField>
    <fullName>PurchYN__c</fullName>
    <label>전표제출</label>
    <length>255</length>
    <type>Text</type>
</CustomField>