PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/SAVE_POINT_AMT__c.field-meta.xml
<CustomField>
    <fullName>SAVE_POINT_AMT__c</fullName>
    <label>적립예정포인트금액</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>