PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/Seq__c.field-meta.xml
<CustomField>
    <fullName>Seq__c</fullName>
    <externalId>true</externalId>
    <label>일련번호</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>