PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/TaxTypeDate__c.field-meta.xml
<CustomField>
    <fullName>TaxTypeDate__c</fullName>
    <label>과세유형 조회일</label>
    <length>255</length>
    <type>Text</type>
</CustomField>