PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/Tips1__c.field-meta.xml
<CustomField>
    <fullName>Tips1__c</fullName>
    <label>수정 봉사료</label>
    <length>255</length>
    <type>Text</type>
</CustomField>