PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/TMARKET_YN__c.field-meta.xml
<CustomField>
    <fullName>TMARKET_YN__c</fullName>
    <label>T시장여부</label>
    <length>255</length>
    <type>Text</type>
</CustomField>