PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/TrAcq__c.field-meta.xml
<CustomField>
    <fullName>TrAcq__c</fullName>
    <label>전문전송기관</label>
    <length>255</length>
    <type>Text</type>
</CustomField>