PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/TRDATE__c.field-meta.xml
<CustomField>
    <fullName>TRDATE__c</fullName>
    <label>승인일자</label>
    <length>255</length>
    <type>Text</type>
</CustomField>