PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/USDAcquTot__c.field-meta.xml
<CustomField>
    <fullName>USDAcquTot__c</fullName>
    <label>달러환산 매입합계[달러환산]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>