PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/VCARDNO__c.field-meta.xml
<CustomField>
    <fullName>VCARDNO__c</fullName>
    <label>V카드번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>