PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_ACQUIRE__c/fields/WorkDate__c.field-meta.xml
<CustomField>
    <fullName>WorkDate__c</fullName>
    <label>작업일자</label>
    <length>255</length>
    <type>Text</type>
</CustomField>